# perf_analysis

./: .gitignore  requirements.txt
notes/: chapter01.md  chapter02.md  chapter03.md  chapter07.md
src/: CMakeLists.txt
src/chapter01/: arch_config.py  baseline_performance.py
src/chapter01/benchmark_simple/: README.md  baseline_performance.py  optimized_performance.py  workload_config.py
src/chapter01/gemm/: README.md  baseline_gemm.cu  fill_matrix.cuh  optimized_gemm_batched.cu  optimized_gemm_strided.cu
src/chapter03/: bind_numa_affinity.py
src/chapter07/: CMakeLists.txt  baseline_async_prefetch.cu  baseline_copy_scalar.cu  baseline_hbm_copy.cu  baseline_uncoalesced_copy.cu  bench_utils.h  optimized_async_prefetch.cu  optimized_copy_scalar_vectorized.cu  optimized_hbm_copy.cu
src/cmake/: arch.cmake  cc_binary.cmake  cc_library.cmake  cc_test.cmake  dependencies.cmake
src/core/common/: cuda_check.h
src/core/common/headers/: cuda_verify.cuh
src/core/profiling/: hta_integration.py
src/core/utils/: compile_utils.py
